--- a/5/form.html
+++ b/5/form.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
+    <link rel="preload" href="fonts/oswaldregular.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
     <link rel="stylesheet" href="css/style.css">
     <base href="https://htmlacademy-adaptive.github.io/1496867-cat-energy-21/5/">
@@ -11,18 +13,21 @@
   <body class="page-body">
     <header class="page-header">
       <nav class="main-nav">
-        <a class="page-header__logo logo" href=""><img class="logo__img" src="img/logo-mobile.png" alt="Cat energy"></a>
-          <!-- <picture>
-            <source srcset="https://via.placeholder.com/768x768 768w">
-            <source srcset="https://via.placeholder.com/480x480 480w">
-            <img src="https://via.placeholder.com/320x320" alt="logo">
-          </picture> -->
-        <div class="header__burger">
-          <span></span>
+        <div class="mobiel-header">
+          <a class="page-header__logo logo" href="index.html"><img class="logo__img" src="img/logo-mobile.png" alt="logo energy"></a>
+            <!-- <picture>
+              <source srcset="https://via.placeholder.com/768x768 768w">
+              <source srcset="https://via.placeholder.com/480x480 480w">
+              <img src="https://via.placeholder.com/320x320" alt="logo">
+            </picture> -->
+          <img class="logo-text__img" src="#" alt="Cat energy" width="101" height="18">
+          <div class="header__burger">
+            <span></span>
+          </div>
         </div>
         <div class="header__menu">
           <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active">
+            <li class="site-list__item">
               <a class="site-list__link" href="index.html">
                 Главная
               </a>
@@ -33,7 +38,7 @@
               </a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link">
+              <a class="site-list__link site-list__link--active" href="#">
                 Подбор программы
               </a>
             </li>
@@ -42,70 +47,129 @@
       </nav>
     </header>
     <main class="page-main">
-      <h1 class="main-form__title">Подбор программы</h1>
       <section class="cat-profile">
         <div class="cat-profile__wrapper">
+          <h1 class="main-form__title">Подбор программы</h1>
           <p class="cat-profile__title">Заполните анкету, и мы подберем программу питания для вашего кота</p>
-          <form class="inform__block">
+        </div>
+        <form class="inform__block">
+          <div class="cat-data__wrapper">
             <ul class="cat-data__list">
-              <li class="cat-data__item"><label class="form__desc" for="nickname-field">Имя:<sup>*</sup></label>
+              <li class="cat-data__item"><label class="form__desc" for="nickname-field">Имя:*</label>
               <input class="form__data" type="text" name="nickname" id="nickname-field" placeholder="БАРСИК" required></li>
-              <li class="cat-data__item"><label class="form__desc" for="weight-field">Вес(кг):<sup>*</sup></label>
+              <li class="cat-data__item"><label class="form__desc" for="weight-field">Вес&#xA0;(кг):*</label>
               <input class="form__data" type="number" name="weight" id="weight-field" placeholder="7" required></li>
-              <li class="cat-data__item"><label class="form__desc" for="age-field">Возраст (лет):</label>
+              <li class="cat-data__item"><label class="form__desc" for="age-field">Возраст&#xA0;(лет):</label>
               <input class="form__data" type="number" name="age" id="age-field" placeholder="7"></li>
             </ul>
-            <input class="form__radio" type="radio" name="program-selection" id="weight-loss-field" value="weight-loss">
-            <label class="form__desc form__desc--color" for="weight-loss-field">Похудение</label><br>
-            <input class="form__radio" type="radio" name="program-selection" id="weight-gain-field"  value="weight-gain">
-            <label class="form__desc form__desc--color" for="weight-gain-field">Набор массы</label><br>
-            <input class="form__radio" type="radio" name="program-selection" id="advice-field"  value="help">
-            <label class="form__desc form__desc--color" for="advice-field">Не знаю (нужен ваш совет)</label><br>
-            <h2 class="form__subtitle">Контактные данные (владельца кота)</h2>
-            <label class="form__desc" for="email-field">E-mail:<sup>*</sup></label>
-            <input class="form__data" type="email" name="email"  placeholder="kuklachev@gmail.com" id="email-field" required><br>
-            <label class="form__desc" for="tel-field">Телефон:<sup>*</sup></label>
-            <input class="form__data" type="tel" name="phone"  placeholder="8 (960) 900-60-90" id="tel-field" required><br>
-            <h2  class="form__subtitle">Коментарий</h2>
-            <textarea  placeholder="Расскажите обо всех повадках кота"></textarea>
-            <h2  class="form__subtitle">Дополнительно</h2>
-            <input class="form__checkbox" type="checkbox" name="additionally" value="sweetener" id="sweetener-field" checked>
-            <label class="form__desc form__desc__color-add" for="sweetener-field">сахарозаменитель</label><br>
-            <input class="form__checkbox" type="checkbox" name="additionally" value="water" id="water-field">
-            <label class="form__desc form__desc__color-add" for="water-field">питьевая вода</label><br>
-            <input class="form__checkbox" type="checkbox" name="additionally" value="milk" id="milk-field">
-            <label class="form__desc form__desc__color-add" for="milk-field">молоко</label><br>
-            <input class="form__checkbox" type="checkbox" name="additionally" value="vitamins" id="vitamins-field">
-            <label class="form__desc form__desc__color-add" for="vitamins-field">витамины</label><br>
-            <button class="button" type="submit">отправить заявку</button>
-          </form>
-          <p class="mandatory__subheading"><sup>*</sup> — Обязательные поля</p>
-        </div>
+          </div>
+          <div class="program-selection__wrapper">
+            <ul class="program-selection__list">
+              <li class="program-selection__item">
+                <input class="form__radio" type="radio" name="program-selection" id="weight-loss-field" value="weight-loss" checked>
+                <span class="radio__icon"></span>
+                <label class="form__desc form__desc--color" for="weight-loss-field">Похудение</label>
+              </li>
+              <li class="program-selection__item">
+                <input class="form__radio" type="radio" name="program-selection" id="weight-gain-field"  value="weight-gain">
+                <span class="radio__icon"></span>
+                <label class="form__desc form__desc--color" for="weight-gain-field">Набор массы</label>
+              </li>
+              <li class="program-selection__item">
+                <input class="form__radio" type="radio" name="program-selection" id="advice-field"  value="help">
+                <span class="radio__icon"></span>
+                <label class="form__desc form__desc--color" for="advice-field">Не знаю (нужен ваш совет)</label><br>
+              </li>
+            </ul>
+          </div>
+          <div class="line-date__wrapper">
+            <div class="line__date">
+              <div class="box">
+                <h2 class="form__subtitle form__subtitle--position-date">Контактные данные (владельца кота)</h2>
+              </div>
+              <div class="middle__line"></div>
+            </div>
+          </div>
+          <div class="feedback__wrapper">
+            <ul class="feedback__list">
+              <li class="feedback__item">
+                <label class="form__desc" for="email-field">E&minus;mail:<sup>*</sup></label>
+                <input class="form__data" type="email" name="email"  placeholder="kuklachev@gmail.com" id="email-field" required>
+              </li>
+              <li class="feedback__item">
+                <label class="form__desc" for="tel-field">Телефон:<sup>*</sup></label>
+                <input class="form__data" type="tel" name="phone"  placeholder="8 (960) 900-60-90" id="tel-field" required>
+              </li>
+            </ul>
+          </div>
+          <div class="line-date__wrapper">
+            <div class="line__date">
+              <h2  class="form__subtitle form__subtitle--position-commit">Коментарий</h2>   <div class="middle__line"></div>
+            </div>
+          </div>
+          <div class="commit__wrapper">
+            <textarea class="commit__text" placeholder="Расскажите обо всех повадках кота"></textarea>
+          </div>
+          <div class="line-date__wrapper">
+            <div class="line__date">
+              <h2  class="form__subtitle form__subtitle--position-add">Дополнительно</h2>
+              <div class="middle__line"></div>
+            </div>
+          </div>
+          <div class="checkbox__wrapper">
+            <ul class="checkbox__list">
+              <li class="checkbox__item">
+                <input class="form__checkbox" type="checkbox" name="additionally" value="sweetener" id="sweetener-field" checked>
+                <span class="checkbox__icon"></span>
+                <label class="form__desc form__desc__color-add" for="sweetener-field">сахарозаменитель</label>
+              </li>
+              <li class="checkbox__item">
+                <input class="form__checkbox" type="checkbox" name="additionally" value="water" id="water-field">
+                <span class="checkbox__icon"></span>
+                <label class="form__desc form__desc__color-add" for="water-field">питьевая вода</label>
+              </li>
+              <li class="checkbox__item">
+                <input class="form__checkbox" type="checkbox" name="additionally" value="milk" id="milk-field">
+                <span class="checkbox__icon"></span>
+                <label class="form__desc form__desc__color-add" for="milk-field">молоко</label>
+              </li>
+              <li class="checkbox__item">
+                <input class="form__checkbox" type="checkbox" name="additionally" value="vitamins" id="vitamins-field">
+                <span class="checkbox__icon"></span>
+                <label class="form__desc form__desc__color-add" for="vitamins-field">витамины</label>
+              </li>
+            </ul>
+            <button class="button-form" type="submit">отправить заявку</button>
+            <p class="mandatory__subheading">* — Обязательные поля</p>
+          </div>
+        </form>
       </section>
-            <footer class="page-footer">
-        <div class="footer__inform footer__index">
-          <b class="inform__title">Приглашаем к сотрудничеству дилеров!</b>
-          <p class="inform__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <footer class="page-footer">
+        <div class="footer-inform__wrapper">
+          <div class="footer__inform footer__index">
+            <b class="inform__title">Приглашаем к сотрудничеству дилеров!</b>
+            <p class="inform__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          </div>
+          <img class="map__image" src="https://via.placeholder.com/150x150" alt="map" width="320" height="362">
         </div>
-        <img class="map__image" src="" width="320" height="362">
         <div class="footer__wrapper">
-          <img class="footer__logo" src="" width="128" height="24">
+          <img class="footer__logo" src="https://via.placeholder.com/150x150" alt="location" width="128" height="24">
           <div class="page-footer__social">
             <ul class="social__list">
               <li class="social__item">
-                <a class="social__link social__link--vkontakte" href=""><img src="" alt="Мы в Вконтакте" width="22" height="13"></a>
+                <a class="social__link social__link--vkontakte" href=""><img src="https://via.placeholder.com/150x150" alt="Мы в Вконтакте" width="22" height="13"></a>
               </li>
               <li class="social__item">
-                <a class="social__link social__link--instagram" href=""><img src="" alt=" Мы в Инстаграме" width="16" height="16"></a>
+                <a class="social__link social__link--instagram" href=""><img src="https://via.placeholder.com/150x150" alt=" Мы в Инстаграме" width="16" height="16"></a>
               </li>
               <li class="social__item">
-                <a class="social__link social__link--facebook" href=""><img src="" alt="Мы в Фейсбуке" width="22" height="22"></a>
+                <a class="social__link social__link--facebook" href=""><img src="https://via.placeholder.com/150x150" alt="Мы в Фейсбуке" width="22" height="22"></a>
               </li>
             </ul>
           </div>
           <div class="page-footer__copyright copyright">
             <b>HTML Academy</b>
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="" alt="HTML Academy" width="27" height="34"></a>
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="https://via.placeholder.com/150x150" alt="HTML Academy" width="27" height="34"></a>
           </div>
         </div>
       </footer>
