--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,33 +11,33 @@
   </head>
   <body class="page-body">
     <header class="page-header">
-      <nav class="main-nav">
-        <div class="mobiel-header">
-          <a class="page-header__logo logo" href="index.html"><img class="logo__img" src="img/logo-mobile.png" alt="logo energy"></a>
+      <nav class="navigation">
+        <div class="navigation__block-icons">
+          <a class="navigation__logo logo" href=""><img class="logo__img" src="img/logo-mobile.png" alt="logo energy"></a>
             <!-- <picture>
               <source srcset="https://via.placeholder.com/768x768 768w">
               <source srcset="https://via.placeholder.com/480x480 480w">
               <img src="https://via.placeholder.com/320x320" alt="logo">
             </picture> -->
-          <img class="logo-text__img" src="#" alt="Cat energy" width="101" height="18">
-          <div class="header__burger">
+          <img class="navigation__logo-text" src="https://via.placeholder.com/150x150" alt="Cat energy" width="101" height="18">
+          <div class="navigation__burger">
             <span></span>
           </div>
         </div>
-        <div class="header__menu">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a class="site-list__link" href="index.html">
+        <div class="site-navigation">
+          <ul class="site-navigation__list">
+            <li class="site-navigation__item">
+              <a class="site-navigation__link" href="index.html">
                 Главная
               </a>
             </li>
-            <li class="site-list__item">
-              <a class="site-list__link site-list__link--active" href="#">
+            <li class="site-navigation__item">
+              <a class="site-navigation__link site-navigation__link--active">
                 Каталог продукции
               </a>
             </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="form.html">
+            <li class="site-navigation__item">
+              <a class="site-navigation__link" href="form.html">
                 Подбор программы
               </a>
             </li>
@@ -46,7 +46,7 @@
       </nav>
     </header>
     <main class="page-main">
-      <h1 class="main-catalog__title">Каталог продукции</h1>
+      <h1 class="page-main__title-catalog">Каталог продукции</h1>
       <section class="product">
         <div class="product__wrapper">
           <h2 class="visually-hidden">Продукты</h2>
@@ -78,7 +78,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="button button--margin-bottom" href="#">Заказать</a>
+                <a class="button button--product" href="#">Заказать</a>
               </div>
             </li>
             <li class="product__item">
@@ -108,7 +108,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="button  button--margin-bottom" href="#">Заказать</a>
+                <a class="button  button--product" href="#">Заказать</a>
               </div>
             </li>
             <li class="product__item">
@@ -138,7 +138,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="button button--margin-bottom" href="#">Заказать</a>
+                <a class="button button--product" href="#">Заказать</a>
               </div>
             </li>
             <li class="product__item">
@@ -168,7 +168,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="button button--margin-bottom" href="#">Заказать</a>
+                <a class="button button--product" href="#">Заказать</a>
               </div>
             </li>
             <li class="product__item">
@@ -198,7 +198,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="button button--margin-bottom" href="#">Заказать</a>
+                <a class="button button--product" href="#">Заказать</a>
               </div>
             </li>
             <li class="product__item">
@@ -228,7 +228,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="button button--margin-bottom" href="#">Заказать</a>
+                <a class="button button--product" href="#">Заказать</a>
               </div>
             </li>
             <li class="product__item">
@@ -258,68 +258,68 @@
                     </div>
                   </div>
                 </div>
-                <a class="button button--margin-bottom" href="#">Заказать</a>
+                <a class="button button--product" href="#">Заказать</a>
               </div>
             </li>
           </ul>
           <div class="all-goods">
-              <a class="all-product__watch" href="#"><span class="plus"></span></a>
-              <h3 class="product-all__title">Показать еще 100500 товаров</h3>
+              <a class="all-goods__watch" href="#"><span class="plus"></span></a>
+              <h3 class="all-goods__title">Показать еще 100500 товаров</h3>
               <p class="all-goods__subtitle">На самом деле вкусов гораздо больше!</p>
-              <a class="button button--all" href="#">Показать всё</a>
+              <a class="button button--all-goods" href="#">Показать всё</a>
           </div>
         </div>
       </section>
       <section class="additional-goods">
-        <div class="ag-line-date__wrapper">
-          <div class="ag-line__date">
-            <div class="ag-box">
+        <div class="additional-goods__wrapper-line-date">
+          <div class="additional-goods__line-date">
+            <div class="additional-goods__box">
               <h2 class="additional-goods__title">Дополнительные&nbsp;товары</h2>
             </div>
-            <div class="ag-middle__line"></div>
+            <div class="additional-goods__middle-line"></div>
           </div>
         </div>
         <div class="additional-goods__wrapper">
           <ul class="additional-goods__list">
             <li class="additional-goods__item">
-              <p class="additional-goods__subtitle">Сахарозаменитель</p>
-              <div class="product-additional">
-                <p class="additional-row">
-                  <span class="additional-label">1 упаковка (100 г)</span>
-                  <span class="additional-value">200 Р.</span>
+              <p class="additional-goods__subtitle-product">Сахарозаменитель</p>
+              <div class="additional-goods__box-description">
+                <p class="additional-goods__row-product">
+                  <span class="additional-goods__label-product">1 упаковка (100 г)</span>
+                  <span class="additional-goods__value-product">200 Р.</span>
                 </p>
               </div>
-              <a class="button button--ag-position" href="#">Заказать</a>
+              <a class="button button--additional-goods" href="#">Заказать</a>
             </li>
             <li class="additional-goods__item">
-              <p class="additional-goods__subtitle">Питьевая вода</p>
-              <div class="product-additional">
-                <p class="additional-row">
-                  <span class="additional-label">5 литров</span>
-                  <span class="additional-value">50 Р.</span>
+              <p class="additional-goods__subtitle-product">Питьевая вода</p>
+              <div class="additional-goods__box-description">
+                <p class="additional-goods__row-product">
+                  <span class="additional-goods__label-product">5 литров</span>
+                  <span class="additional-goods__value-product">50 Р.</span>
                 </p>
               </div>
-              <a class="button button--ag-position" href="#">Заказать</a>
+              <a class="button button--additional-goods" href="#">Заказать</a>
             </li>
             <li class="additional-goods__item">
-              <p class="additional-goods__subtitle">Молоко</p>
-              <div class="product-additional">
-                <p class="additional-row">
-                  <span class="additional-label">1 литр</span>
-                  <span class="additional-value">100 Р.</span>
+              <p class="additional-goods__subtitle-product">Молоко</p>
+              <div class="additional-goods__box-description">
+                <p class="additional-goods__row-product">
+                  <span class="additional-goods__label-product">1 литр</span>
+                  <span class="additional-goods__value-product">100 Р.</span>
                 </p>
               </div>
-              <a class="button button--ag-position" href="#">Заказать</a>
+              <a class="button button--additional-goods" href="#">Заказать</a>
             </li>
             <li class="additional-goods__item">
-              <p class="additional-goods__subtitle">Витамины</p>
-              <div class="product-additional">
-                <p class="additional-row">
-                  <span class="additional-label">1 упаковка (30 г)</span>
-                  <span class="additional-value">300 Р.</span>
+              <p class="additional-goods__subtitle-product">Витамины</p>
+              <div class="additional-goods__box-description">
+                <p class="additional-goods__row-product">
+                  <span class="additional-goods__label-product">1 упаковка (30 г)</span>
+                  <span class="additional-goods__value-product">300 Р.</span>
                 </p>
               </div>
-              <a class="button button--ag-position" href="#">Заказать</a>
+              <a class="button button--additional-goods" href="#">Заказать</a>
             </li>
           </ul>
           <article class="bonus">
@@ -329,17 +329,17 @@
           </article>
         </div>
       </section>
-      <footer class="page-footer">
-        <div class="footer-inform__wrapper">
-          <div class="footer__inform footer__index">
-            <b class="inform__title">Приглашаем к сотрудничеству дилеров!</b>
-            <p class="inform__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <footer class="footer">
+        <div class="footer__wrapper-inform-box">
+          <div class="footer__inform-box">
+            <b class="footer__title-inform">Приглашаем к сотрудничеству дилеров!</b>
+            <p class="footer__address-inform">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
           </div>
-          <img class="map__image" src="https://via.placeholder.com/150x150" alt="map" width="320" height="362">
+          <img class="footer__map" src="https://via.placeholder.com/150x150" alt="map" width="320" height="362">
         </div>
         <div class="footer__wrapper">
           <img class="footer__logo" src="https://via.placeholder.com/150x150" alt="location" width="128" height="24">
-          <div class="page-footer__social">
+          <div class="social">
             <ul class="social__list">
               <li class="social__item">
                 <a class="social__link social__link--vkontakte" href=""><img src="https://via.placeholder.com/150x150" alt="Мы в Вконтакте" width="22" height="13"></a>
@@ -352,9 +352,9 @@
               </li>
             </ul>
           </div>
-          <div class="page-footer__copyright copyright">
-            <b>HTML Academy</b>
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="https://via.placeholder.com/150x150" alt="HTML Academy" width="27" height="34"></a>
+          <div class="footer__copyright">
+            <b class="footer__copyright__title">HTML Academy</b>
+            <a class="footer__copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="https://via.placeholder.com/150x150" alt="HTML Academy" width="27" height="34"></a>
           </div>
         </div>
       </footer>
