--- a/source/index.html
+++ b/source/index.html
@@ -4,38 +4,40 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
+    <link rel="preload" href="fonts/oswaldregular.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page-body">
     <header class="page-header">
-      <nav class="main-nav">
-        <div class="mobiel-header">
-          <a class="page-header__logo logo" href=""><img class="logo__img" src="img/logo-mobile.png" alt="logo energy"></a>
+      <nav class="navigation">
+        <div class="navigation__block-icons">
+          <a class="navigation__logo logo" href=""><img class="logo__img" src="img/logo-mobile.png" alt="logo energy"></a>
             <!-- <picture>
               <source srcset="https://via.placeholder.com/768x768 768w">
               <source srcset="https://via.placeholder.com/480x480 480w">
               <img src="https://via.placeholder.com/320x320" alt="logo">
             </picture> -->
-          <img class="logo-text__img" src="https://via.placeholder.com/150x150" alt="Cat energy" width="101" height="18">
-          <div class="header__burger">
+          <img class="navigation__logo-text" src="https://via.placeholder.com/150x150" alt="Cat energy" width="101" height="18">
+          <div class="navigation__burger">
             <span></span>
           </div>
         </div>
-        <div class="header__menu">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a class="site-list__link site-list__link--active">
+        <div class="site-navigation">
+          <ul class="site-navigation__list">
+            <li class="site-navigation__item">
+              <a class="site-navigation__link site-navigation__link--active">
                 Главная
               </a>
             </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="catalog.html">
+            <li class="site-navigation__item">
+              <a class="site-navigation__link" href="catalog.html">
                 Каталог продукции
               </a>
             </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="form.html">
+            <li class="site-navigation__item">
+              <a class="site-navigation__link" href="form.html">
                 Подбор программы
               </a>
             </li>
@@ -48,30 +50,30 @@
       <section class="diet">
         <div class="diet__wrapper">
           <header class="diet__header">
-            <div class="block__text">
+            <div class="diet__text">
               <h2 class="diet__title">Функциональное питание для котов</h2>
               <p class="diet__slogan">Занялся собой? Займись котом!</p>
             </div>
-            <div class="container__img">
+            <div class="diet__container-img">
               <img class="diet__img visually-hidden" src="https://via.placeholder.com/150x150" alt="Кошачий корм">
             </div>
-            <a href="" class="button button-diet">подобрать программу</a>
+            <a href="" class="button button--diet">подобрать программу</a>
           </header>
-          <div class="slimming-diet">
+          <div class="diet__slimming-block">
             <div class="diet__inner">
               <img class="diet__icon diet__icon--indents-slim" src="https://via.placeholder.com/150x150" alt="Грациозная кошка" width="32" height="50">
               <h2 class="diet__caption">Похудение</h2>
             </div>
             <p class="diet__subtitle">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="diet__link" href="">каталог slim<svg class="button__icon" width="32" height="10"></svg></a>
+            <a class="diet__link" href="">каталог slim<svg class="diet__icon-button" width="32" height="10"></svg></a>
           </div>
-          <div class="diet-weight-gain">
+          <div class="diet__weight-gain-block">
             <div class="diet__inner">
               <img class="diet__icon diet__icon--indents-strong" src="https://via.placeholder.com/150x150" alt="Мощный кот" width="67" height="50">
               <h2 class="diet__caption">Набор массы</h2>
             </div>
             <p class="diet__subtitle">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="diet__link" href="">каталог pro<svg class="button__icon" width="32" height="10"></svg></a>
+            <a class="diet__link" href="">каталог pro<svg class="diet__icon-button" width="32" height="10"></svg></a>
           </div>
         </div>
       </section>
@@ -113,29 +115,29 @@
             <h2 class="example__title">Живой пример</h2>
             <p class="example__subtitle">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
           </header>
-          <div class="total">
-            <ul class="total__list">
-              <li class="total__item">
-                <h3 class="total__title">5 кг</h3>
-                <p class="total__subtitle"><span class="subtitle__block">снижение</span><span class="subtitle__block">веса</span></p>
+          <div class="example__total-block">
+            <ul class="example__total-list">
+              <li class="example__total-item">
+                <h3 class="example__total-title">5 кг</h3>
+                <p class="example__total-subtitle"><span class="example__subtitle-block">снижение</span><span class="example__subtitle-block">веса</span></p>
               </li>
-              <li class="total__item">
-                <h3 class="total__title">60 дней</h3>
-                <p class="total__subtitle"><span class="subtitle__block">затрачено</span><span class="subtitle__block">времени</span></p>
+              <li class="example__total-item">
+                <h3 class="example__total-title">60 дней</h3>
+                <p class="example__total-subtitle"><span class="example__subtitle-block">затрачено</span><span class="example__subtitle-block">времени</span></p>
               </li>
             </ul>
-            <p class="maney-total">Затраты на питание: 15 000 руб.</p>
+            <p class="example__maney-total">Затраты на питание: 15 000 руб.</p>
           </div>
-          <div class="visualization">
-            <div class="visualization__img">
+          <div class="example__visualization">
+            <div class="example__visualization-block">
               <img src="https://via.placeholder.com/150x150" alt="Кот до" width="140" height="232">
               <img src="https://via.placeholder.com/150x150" alt="Кот после" width="140" height="232">
             </div>
-            <div class="scroll__box">
+            <div class="scroll">
               <button class="scroll__button">было</button>
-              <div class="slider__wrapper">
-                <div class="slider__body">
-                  <div class="slider__scroll"></div>
+              <div class="scroll__wrapper-slider">
+                <div class="scroll__body-slider">
+                  <div class="scroll__slider"></div>
                 </div>
               </div>
               <button class="scroll__button">стало</button>
@@ -143,32 +145,32 @@
           </div>
         </div>
       </section>
-      <footer class="page-footer">
-        <div class="footer-inform__wrapper">
-          <div class="footer__inform footer__index">
-            <b class="inform__title">Приглашаем к сотрудничеству дилеров!</b>
-            <p class="inform__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <footer class="footer">
+        <div class="footer__wrapper-inform-box">
+          <div class="footer__inform-box footer__inform-box--background">
+            <b class="footer__title-inform">Приглашаем к сотрудничеству дилеров!</b>
+            <p class="footer__address-inform">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
           </div>
-          <img class="map__image" src="https://via.placeholder.com/150x150" alt="map" width="320" height="362">
+          <img class="footer__map" src="https://via.placeholder.com/150x150" alt="map" width="320" height="362">
         </div>
         <div class="footer__wrapper">
-          <img class="footer__logo" src="https://via.placeholder.com/150x150https://via.placeholder.com/150x150" alt="location" width="128" height="24">
-          <div class="page-footer__social">
+          <img class="footer__logo" src="https://via.placeholder.com/150x150" alt="location" width="128" height="24">
+          <div class="social">
             <ul class="social__list">
               <li class="social__item">
                 <a class="social__link social__link--vkontakte" href=""><img src="https://via.placeholder.com/150x150" alt="Мы в Вконтакте" width="22" height="13"></a>
               </li>
               <li class="social__item">
-                <a class="social__link social__link--instagram" href=""><img src="https://via.placeholder.com/150x150" alt=" Мы в Инстаграме" width="16" height="16"></a>
+                <a class="social__link social__link--instagram" href=""><img src="https://via.placeholder.com/150x150" alt="Мы в Инстаграме" width="16" height="16"></a>
               </li>
               <li class="social__item">
                 <a class="social__link social__link--facebook" href=""><img src="https://via.placeholder.com/150x150" alt="Мы в Фейсбуке" width="22" height="22"></a>
               </li>
             </ul>
           </div>
-          <div class="page-footer__copyright copyright">
-            <b>HTML Academy</b>
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="https://via.placeholder.com/150x150" alt="HTML Academy" width="27" height="34"></a>
+          <div class="footer__copyright">
+            <b class="footer__copyright__title">HTML Academy</b>
+            <a class="footer__copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="https://via.placeholder.com/150x150" alt="HTML Academy" width="27" height="34"></a>
           </div>
         </div>
       </footer>
